Remove intro in 760 mode. Add headings to css files.

--- a/Neptuo.WebSite/Content/Stylesheet/blog.css
+++ b/Neptuo.WebSite/Content/Stylesheet/blog.css
@@ -1,12 +1,4 @@
-﻿/* ============================================================================================= */
-
-.intro.blogpost h1 {
-    font-size: 100px;
-}
-
-.intro.blogpost p {
-    font-size: 30px;
-}
+﻿/* ====== BLOG ================================================================================= */
 
 .blogpost h2 {
     margin: 40px 0 10px 0;
@@ -37,7 +29,7 @@
 
 .blog .folder-content {
     float: left;
-    width: 740px;
+    width: calc(100% - 95px);
 }
 
 .comment {
