--- a/Neptuo.WebSite/Content/Stylesheet/box.css
+++ b/Neptuo.WebSite/Content/Stylesheet/box.css
@@ -1,4 +1,4 @@
-﻿/* ============================================================================================= */
+﻿/* ====== BOX ================================================================================== */
 
 .box .folder-heading {
     text-align: center;
