--- a/Neptuo.WebSite/Content/Stylesheet/common.css
+++ b/Neptuo.WebSite/Content/Stylesheet/common.css
@@ -1,4 +1,6 @@
-﻿h2, h3 {
+﻿/* ====== COMMON =============================================================================== */
+
+h2, h3 {
     margin: 0;
 }
 
