--- a/Neptuo.WebSite/Content/Stylesheet/folder.css
+++ b/Neptuo.WebSite/Content/Stylesheet/folder.css
@@ -1,4 +1,4 @@
-﻿/* ============================================================================================= */
+﻿/* ====== FOLDER =============================================================================== */
 
 .folder {
     margin: 10px;
