--- a/Neptuo.WebSite/Views/Content/BlogPost.cshtml
+++ b/Neptuo.WebSite/Views/Content/BlogPost.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = Model.Title;
 }
 
-<div class="intro blogpost">
+<div class="intro important blogpost">
     <div class="intro-content container">
         <h1>@Model.Title</h1>
         <p>
