--- a/Neptuo.WebSite/Content/Stylesheet/ie.css
+++ b/Neptuo.WebSite/Content/Stylesheet/ie.css
@@ -1,4 +1,6 @@
-﻿@media screen\0 {
+﻿/* ====== IE =================================================================================== */
+
+@media screen\0 {
     .navbar {
         filter: unset;
     }
