--- a/Neptuo.WebSite/Content/web.scss
+++ b/Neptuo.WebSite/Content/web.scss
@@ -5,5 +5,6 @@
 @import "Stylesheet/box";
 @import "Stylesheet/blog";
 @import "Stylesheet/responsiveness";
+@import "Stylesheet/blog.responsiveness";
 @import "Stylesheet/syntax";
 @import "Stylesheet/ie";
