--- a/Neptuo.WebSite/Content/Stylesheet/design.css
+++ b/Neptuo.WebSite/Content/Stylesheet/design.css
@@ -1,5 +1,11 @@
 ﻿/* ============================================================================================= */
 
+@font-face {
+  font-family: 'Gabriola';
+  src: url('../fonts/gabriola.eot');
+  src: url('../fonts/gabriola.eot?#iefix') format('embedded-opentype'), url('../fonts/gabriola.woff') format('woff'), url('../fonts/gabriola.ttf') format('truetype');
+}
+
 body {
     padding: 0;
     margin: 0;
