--- a/Neptuo.WebSite/Content/web.css
+++ b/Neptuo.WebSite/Content/web.css
@@ -122,7 +122,7 @@ body {
     text-decoration: none;
     padding: 15px 25px 10px 25px;
     font-size: 56px;
-    font-family: "Gabriola";
+    font-family: "Gabriela";
     color: white;
     display: block;
 }
@@ -475,6 +475,9 @@ input.folder {
 }
 
 @media (max-width: 459px) {
+    code {
+        white-space: normal;
+    }
     .container {
         padding: 0;
     }
