--- a/Content/Stylesheet/syntax.css
+++ b/Content/Stylesheet/syntax.css
@@ -1,4 +1,6 @@
-﻿.highlight.csharp {
+﻿/* ====== SYNTAX HIGHLIGHTING ================================================================== */
+
+.highlight.csharp {
     color: #333;
     font-size: 12px;
     line-height: 16px;
