Fix hamburger menu display in edge width.

--- a/Neptuo.WebSite/Content/Stylesheet/responsiveness.css
+++ b/Neptuo.WebSite/Content/Stylesheet/responsiveness.css
@@ -5,6 +5,10 @@
         word-wrap: break-word;
     }
 
+    .navbar-toggle {
+        display: block;
+    }
+
     .navbar {
         position: static;
         margin-bottom: 0;
