--- a/Neptuo.WebSite/Views/Content/BlogPost.cshtml
+++ b/Neptuo.WebSite/Views/Content/BlogPost.cshtml
@@ -47,6 +47,10 @@
     }
 </div>
 
+@section FooterCenter {
+    <span>@Html.RouteLink("Atom", "BlogAtom")</span>
+}
+
 @section Javascript {
 
     @if (Model.Post.GitHubCommentPath != null)
