--- a/Neptuo.WebSite/Content/Stylesheet/design.css
+++ b/Neptuo.WebSite/Content/Stylesheet/design.css
@@ -162,7 +162,7 @@ footer a:hover {
     color: #666666;
 }
 
-footer .left, footer .right {
+footer .left, footer .right, footer .center {
     padding: 10px 10px;
 }
 
