Remove css classes.

--- a/src/Neptuo.WebSite/Views/Content/Home.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/Home.cshtml
@@ -18,9 +18,9 @@
         </span>
     </div>
 
-    <div class="folder home-services">
+    <div class="folder">
         <div class="col-md-4">
-            <div class="home-service first">
+            <div>
                 <div class="folder-heading">
                     <span class="glyphicon glyphicon-usd"></span>
                     <h2>Business apps</h2>
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="home-service">
+            <div>
                 <div class="folder-heading">
                     <span class="glyphicon glyphicon-globe"></span>
                     <h2>Web sites</h2>
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="home-service last">
+            <div>
                 <div class="folder-heading">
                     <span class="glyphicon glyphicon-phone"></span>
                     <h2>Mobile apps</h2>
@@ -71,7 +71,7 @@
         <div class="clear"></div>
 
         <div class="col-md-4">
-            <div class="home-service first">
+            <div>
                 <div class="folder-heading">
                     <span>C#</span>
                     <h2>Most prefered</h2>
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="home-service first">
+            <div>
                 <div class="folder-heading">
                     <span>PHP</span>
                     <h2>Lowcost</h2>
@@ -93,7 +93,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="home-service last">
+            <div>
                 <div class="folder-heading">
                     <span class="glyphicon glyphicon-thumbs-up"></span>
                     <h2>For hire</h2>
