--- a/src/Neptuo.WebSite/Views/Content/Home.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/Home.cshtml
@@ -20,7 +20,7 @@
 
     <div class="folder">
         <div class="col-md-4">
-            <div>
+            <div class="box">
                 <div class="folder-heading">
                     <span class="glyphicon glyphicon-usd"></span>
                     <h2>Business apps</h2>
