--- a/src/Neptuo.WebSite/Views/Content/BlogPost.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/BlogPost.cshtml
@@ -1,4 +1,5 @@
-﻿@model Neptuo.WebSite.Models.Blogging.PostViewModel
+﻿@using Neptuo.WebSite.Navigation
+@model Neptuo.WebSite.Models.Blogging.PostViewModel
 @{
     ViewBag.Title = Model.Title;
 }
@@ -48,7 +49,7 @@
 </div>
 
 @section FooterCenter {
-    <span>@Html.RouteLink("Atom", "BlogAtom")</span>
+    <span>@Html.ModelLink("Atom", new BlogAtomRoute())</span>
 }
 
 @section Javascript {
