Main menu items uses ModelUrl. Add link to atom.xml to all pages.

--- a/src/Neptuo.WebSite/Views/Content/BlogAtom.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/BlogAtom.cshtml
@@ -15,7 +15,7 @@
     </author>
     @foreach (var post in Model)
     {
-        var url = "http://www.neptuo.com" + Url.ModelUrl(new BlogPostRoute(post.ReleaseDatepost.Url));
+        var url = "http://www.neptuo.com" + Url.ModelUrl(new BlogPostRoute(post.ReleaseDate, post.Url));
         <entry>
             <title>@post.Title</title>
             <link href="@url" />
