--- a/Content/web.css
+++ b/Content/web.css
@@ -70,7 +70,7 @@ input[type=text]:focus {
 
 /* ============================================================================================= */
 @font-face {
-    font-family: 'Gabriola';
+    font-family: 'Gabriola (web)';
     src: url("../fonts/gabriola.eot");
     src: url("../fonts/gabriola.eot?#iefix") format("embedded-opentype"), url("../fonts/gabriola.woff") format("woff"), url("../fonts/gabriola.ttf") format("truetype");
 }
@@ -183,7 +183,7 @@ body {
 }
 
 .intro h1 {
-    font-family: "Gabriola", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Gabriola", "Gabriola (web)", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 160px;
     line-height: 1;
     letter-spacing: -2px;
@@ -193,7 +193,7 @@ body {
 }
 
 .intro p {
-    font-family: "Gabriola", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Gabriola", "Gabriola (web)", "Helvetica Neue", Helvetica, Arial, sans-serif;
     max-width: 800px;
     padding-left: 8px;
     color: white;
