--- a/Content/web.css
+++ b/Content/web.css
@@ -394,6 +394,18 @@ input.folder {
     text-align: justify;
 }
 
+.folder .box {
+    margin: 0 10px;
+}
+
+.folder .col-md-4:first-child .box {
+    margin-left: 0;
+}
+
+.folder .col-md-4:last-child .box {
+    margin-right: 0;
+}
+
 /* ====== BLOG ================================================================================= */
 .blogpost h2 {
     margin: 40px 0 10px 0;
