--- a/src/Neptuo.WebSite/Views/Content/Home.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/Home.cshtml
@@ -178,6 +178,8 @@
         
         @Html.Partial("ShortWebs", Model.Webs)
 
+        <div class="clear"></div>
+
         <p>
             Also we have created some sites (this one included) using pre-generated static sites, hosted on free hostings and periodically or manualy updated.
             These sites uses advanced WebApplication technologies, like ASP.NET, but only static HTML &amp; assets are published on production server.
