--- a/src/Neptuo.WebSite/Content/web.css
+++ b/src/Neptuo.WebSite/Content/web.css
@@ -439,6 +439,10 @@ input.folder {
     width: calc(100% - 95px);
 }
 
+.blogpost img {
+    max-width: 100%;
+}
+
 .comment {
     margin: 15px 0 5px 0;
     padding: 15px 0 5px 0;
