--- a/src/Neptuo.WebSite/Views/Content/Home.cshtml
+++ b/src/Neptuo.WebSite/Views/Content/Home.cshtml
@@ -170,7 +170,7 @@
 
     <div class="folder">
         <h2 class="folder-heading">
-            <a href="@Url.Action("service")">Lastest web references</a>
+            <a href="@Url.Action("service")">Latest web references</a>
         </h2>
         <p>
             Here are some of the recent web sites we have made. In some cases we have outsourced graphics. Most of the sites are running our CMS.
